load("@rules_groovy//groovy:defs.bzl", "groovy_library", "spock_test")

groovy_library(
    name = "calc",
    srcs = ["src/main/groovy/calc/Calc.groovy"],
)

# `spock_test` pins the runner to JUnit 5's ConsoleLauncher; Spock 2.x
# discovers specs via the JUnit Platform engine. Spock + Platform jars
# come from rules_jvm_external's `maven.install` in MODULE.bazel.
spock_test(
    name = "CalcSpec",
    specs = ["src/test/groovy/calc/CalcSpec.groovy"],
    deps = [
        ":calc",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_spockframework_spock_core",
    ],
)
