module(
    name = "rules_groovy_example_spock_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_groovy", version = "0.0.0")
local_path_override(
    module_name = "rules_groovy",
    path = "../..",
)

bazel_dep(name = "rules_jvm_external", version = "7.0")

groovy = use_extension("@rules_groovy//groovy:extensions.bzl", "groovy")
use_repo(groovy, "groovy_toolchains")

register_toolchains("@groovy_toolchains//:all")

# Spock 2.x couples to the Groovy major.minor of the toolchain.
# `spock-core:2.3-groovy-4.0` pairs with the default `rules_groovy`
# toolchain (Groovy 4.0.32). For Groovy 3.0 use `2.3-groovy-3.0`;
# Spock 1.3 (Groovy 2.5, JUnit 4 path) needs a bare `groovy_test`
# with `runner_class = "org.junit.runner.JUnitCore"`.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.spockframework:spock-core:2.3-groovy-4.0",
        "org.junit.platform:junit-platform-console:1.11.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
