load("@rules_groovy//groovy:defs.bzl", "groovy_junit5_test")

# A JUnit 5 test whose source uses only Groovy + JDK stdlib types.
# JUnit 5 framework jars come from rules_jvm_external's `maven.install`
# in MODULE.bazel.
groovy_junit5_test(
    name = "StdlibTest",
    tests = ["src/test/groovy/stdlib/StdlibTest.groovy"],
    deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
